<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.minyiyang.finalproject.EditeNumQuest">
    <!--quest-->
    <TextView
        android:id="@+id/NumQust"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textQust"
        style="@style/textQust"/>
    <EditText
        android:id="@+id/Num_quest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/NumQust"
        android:hint="@string/input_quest"
        android:inputType="textMultiLine"
        style="@style/input"/>
    <!--answer-->
    <TextView
        android:id="@+id/NumAns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textAns"
        android:layout_below="@+id/Num_quest"
        style="@style/textQust"/>
    <EditText
        android:id="@+id/Num_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/NumAns"
        android:hint="@string/input_hite"
        android:inputType="textMultiLine"
        style="@style/input"/>
    <!--accuracy-->
    <TextView
        android:id="@+id/NumAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textAcc"
        android:layout_below="@+id/Num_answer"
        style="@style/textQust"/>
    <EditText
        android:id="@+id/Num_ancc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/NumAcc"
        android:hint="@string/input_acc"
        android:inputType="textMultiLine"
        style="@style/input"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Num_ancc"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/submit"
            android:id="@+id/submit_button"
            android:background="@drawable/button1"
            style="@style/button"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_toRightOf="@+id/submit_button"
            android:text="@string/cancel"
            android:id="@+id/cancle_button"
            android:background="@drawable/button1"
            style="@style/button"/>
    </LinearLayout>
</RelativeLayout>
