<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.minyiyang.finalproject.TFFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--quest-->
        <TextView
            android:id="@+id/textQust"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textQust"
            style="@style/textQust"/>
        <TextView
            android:id="@+id/TFQust"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textQust"
            style="@style/textQust"/>
        <!--con-->
            <TextView
                android:id="@+id/NumAns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textAns"
                android:layout_below="@+id/TFQust"
                style="@style/textQust"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/NumAns"
            android:orientation="horizontal"
            android:id="@+id/RGroup">
            <RadioButton
                android:id="@+id/rbt1"
                android:layout_width="wrap_content"
                android:gravity="fill"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/rbt" />
            <RadioButton
                android:id="@+id/rbt2"
                android:layout_width="wrap_content"
                android:gravity="fill"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/rbt1"
                android:text="@string/rbf" />
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/RGroup">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/del"
                android:id="@+id/del_b"
                style="@style/button"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_toRightOf="@+id/submit_button"
                android:text="@string/update"
                android:id="@+id/update_b"
                style="@style/button"/>
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>
