<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">
<TextView
    android:id="@+id/chose"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/chose"
    style="@style/author"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/chose">
    <Button
    android:id="@+id/addMultiQuest"
    android:layout_width="0dp"
    android:layout_height="60dp"
    android:layout_weight="1"
        android:layout_marginBottom="5dp"
    android:layout_alignParentBottom="true"
        android:background="@drawable/button1"
    android:text="@string/addMultiQuest"
        style="@style/button"/>
    <Button
    android:id="@+id/addNumQuest"
    android:layout_width="0dp"
    android:layout_weight="1"
    android:layout_height="60dp"
        android:layout_marginBottom="5dp"
        android:layout_toRightOf="@+id/addMultiQuest"
    android:layout_alignParentBottom="true"
        android:background="@drawable/button1"
        android:text="@string/addNumQuest"
        style="@style/button"/>
    <Button
    android:id="@+id/addTFQuest"
    android:layout_width="0dp"
    android:layout_height="60dp"
    android:layout_weight="1"
        android:layout_marginBottom="5dp"
        android:layout_toRightOf="@+id/addNumQuest"
    android:layout_alignParentBottom="true"
        android:background="@drawable/button1"
        android:text="@string/addTFQuest"
        style="@style/button"/>
</LinearLayout>
</RelativeLayout>