<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.minyiyang.finalproject.DialogStatistics">
    <TextView
        android:id="@+id/button_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/button_state"
        style="@style/author"/>
    <TextView
        android:id="@+id/totalNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/total_num"
        style="@style/textQust"/>
    <TextView
        android:id="@+id/count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        style="@style/textQust"/>
    <TextView
        android:id="@+id/longest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/longest"
        style="@style/textQust"/>
    <TextView
        android:id="@+id/long_ans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        style="@style/textQust"/>
    <TextView
        android:id="@+id/shortest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shortest"
        style="@style/textQust"
        />
    <TextView
        android:id="@+id/short_ans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        style="@style/textQust"/>
    <TextView
        android:id="@+id/average"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/average"
        style="@style/textQust"
        />
    <TextView
        android:id="@+id/ave_ans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        style="@style/textQust"/>
</LinearLayout>
