<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.minyiyang.finalproject.NumFragment"
    android:id="@+id/num">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--quest-->
        <TextView
            android:id="@+id/textQust"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textQust"
            style="@style/textQust"/>
        <TextView
            android:id="@+id/NumQust"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textQust"
            style="@style/textQust"/>
        <!--con-->
        <TextView
            android:id="@+id/textAnswer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/QustCon"
            android:text="@string/textAns"
            style="@style/textQust"/>
        <TextView
            android:id="@+id/Numans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/QustCon"
            android:layout_toRightOf="@+id/textAnswer1"
            style="@style/textQust"/>
        <!--accuracy-->
        <TextView
            android:id="@+id/NumAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textAcc"
            android:layout_below="@+id/Numans"
            style="@style/textQust"/>
        <TextView
            android:id="@+id/Numacc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textQust"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/del"
                android:id="@+id/del_b"
                android:background="@drawable/button1"
                style="@style/button"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/update"
                android:id="@+id/update_b"
                android:background="@drawable/button1"
                style="@style/button"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
