<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="fill_parent"
    tools:context="com.example.minyiyang.finalproject.EditeMultiQuest">
    <!--quest-->
    <TextView
        android:id="@+id/textQust"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/textQust"
        style="@style/textQust"/>
    <EditText
        android:id="@+id/input_quest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textQust"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/input_quest"
        android:inputType="textMultiLine"
        style="@style/input"/>
    <!--answer1-->
    <TextView
        android:id="@+id/textAnswer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@+id/input_quest"
        android:text="A"
        style="@style/textQust"/>
    <EditText
        android:id="@+id/input_answer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_quest"
        android:layout_toRightOf="@+id/textAnswer1"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/input_quest"
        android:inputType="textMultiLine"
        style="@style/input"/>
    <!--answer2-->
    <TextView
        android:id="@+id/textAnswer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@+id/textAnswer1"
        android:text="B"
        style="@style/textQust"/>
    <EditText
        android:id="@+id/input_answer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textAnswer1"
        android:layout_toRightOf="@+id/textAnswer2"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/input_quest"
        android:inputType="textMultiLine"
        style="@style/input"/>
    <!--answer3-->
    <TextView
        android:id="@+id/textAnswer3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@+id/textAnswer2"
        android:text="C"
        style="@style/textQust"/>
    <EditText
        android:id="@+id/input_answer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textAnswer2"
        android:layout_toRightOf="@+id/textAnswer3"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/input_quest"
        android:inputType="textMultiLine"
        style="@style/input"/>
    <!--answer4-->
    <TextView
        android:id="@+id/textAnswer4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@+id/textAnswer3"
        android:text="D"
        style="@style/textQust"/>
    <EditText
        android:id="@+id/input_answer4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textAnswer3"
        android:layout_toRightOf="@+id/textAnswer4"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/input_quest"
        android:inputType="textMultiLine"
        style="@style/input"/>
    <!--set answer-->
    <TextView
        android:id="@+id/setanwer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@+id/input_answer4"
        android:text="@string/set_answer"
        style="@style/textQust"/>
    <EditText
        android:id="@+id/cor_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_answer4"
        android:layout_toRightOf="@+id/setanwer"
        android:layout_centerHorizontal="true"
        android:ems="10"
        style="@style/input"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/cor_answer"
    >
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@+id/cor_answer"
        android:text="@string/submit"
        android:id="@+id/submit_button"
        style="@style/button"/>
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_toRightOf="@+id/submit_button"
        android:layout_below="@+id/textAnswer4"
        android:text="@string/cancle"
        android:id="@+id/cancle_button"
        style="@style/button"/>
</LinearLayout>
</RelativeLayout>
