<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.minyiyang.finalproject.MultiFragment"
    android:id="@+id/mutil">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--quest-->
    <TextView
        android:id="@+id/textQust"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textQust"
        style="@style/textQust"/>
    <TextView
        android:id="@+id/QustCon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textQust"
        style="@style/textQust"/>
    <!--con-->
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/QustCon"
        android:id="@+id/RGroup">
    <RadioButton
        android:id="@+id/rb1"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/QustCon"
        android:layout_height="wrap_content"
        android:text="A"
        style="@style/textQust"/>
    <!--con-->
    <RadioButton
        android:id="@+id/rb2"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/textCon1"
        android:layout_height="wrap_content"
        android:text="B"
        style="@style/textQust"/>
    <!--con-->
    <RadioButton
        android:id="@+id/rb3"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/textCon2"
        android:layout_height="wrap_content"
        android:text="C"
        style="@style/textQust"/>
    <!--con-->
    <RadioButton
        android:id="@+id/rb4"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/textCon3"
        android:layout_height="wrap_content"
        android:text="D"
        style="@style/textQust"/>
    </RadioGroup>
    <TextView
        android:id="@+id/textCon1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/QustCon"
        android:layout_toRightOf="@+id/RGroup"
        style="@style/textQust"/>
    <TextView
        android:id="@+id/textCon2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textCon1"
        android:layout_toRightOf="@+id/RGroup"
        style="@style/textQust"/>
    <TextView
        android:id="@+id/textCon3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textCon2"
        android:layout_toRightOf="@+id/RGroup"
        style="@style/textQust"/>
    <TextView
        android:id="@+id/textCon4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textCon3"
        android:layout_toRightOf="@+id/RGroup"
        style="@style/textQust"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/RGroup"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/del"
            android:id="@+id/del_b"
            style="@style/button"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_toRightOf="@+id/submit_button"
            android:text="@string/update"
            android:id="@+id/update_b"
            style="@style/button"/>
    </LinearLayout>
</RelativeLayout>
</FrameLayout>
